frontend: fixed path resolve config, fixed overflow display

--- a/web/app/src/app.css
+++ b/web/app/src/app.css
@@ -24,23 +24,9 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 #app {
-  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 button {
@@ -79,7 +65,11 @@ button:focus-visible {
 }
 
 @layer components {
-  .playlist_card {
+  .music-queue-row {
+    @apply min-w-[300px]
+  }
+
+  .playlist-card {
     @apply flex p-2 m-2 max-h-[90px] border rounded-xl shadow-sm shadow-amber-100
   }
 }
